--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,11 @@
-hello
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="animate.css/animate.css">
+    <title>Git-Game</title>
+  </head>
+  <body>
+
+  </body>
+</html>
