added a bower.json file since only some libraries are available through bower

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,12 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="animate.css/animate.css">
+    <link rel="stylesheet" href="materialize-css/bin/materialize.css">
     <title>Git-Game</title>
   </head>
   <body>
 
+
+    <script src="jquery/dist/jquery.js" charset="utf-8"></script>
   </body>
 </html>
