Creating partials and making the gist of the website

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,11 +4,23 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="animate.css/animate.css">
     <link rel="stylesheet" href="materialize-css/bin/materialize.css">
+    <script src="wow/dist/wow.js" charset="utf-8"></script>
     <title>Git-Game</title>
   </head>
   <body>
+    <head>
+      <%- include('partials/_nav.ejs')%>
+    </head>
 
+    <main>
+      <%- include('partials/_index.ejs')%>
+    </main>
+
+    <footer>
+      <%- include('partials/_footer.ejs')%>
+    </footer>
 
     <script src="jquery/dist/jquery.js" charset="utf-8"></script>
+
   </body>
 </html>
