Website almost completed

--- a/views/creators.ejs
+++ b/views/creators.ejs
@@ -20,6 +20,9 @@
     <!--include  the wow.js library for cool scroll reveals-->
     <script src="wow/dist/wow.js" charset="utf-8">new WOW().init();</script>
 
+    <!--Include our custom js files here-->
+    <script src="js/main.js" charset="utf-8"></script>
+
     <title>Git-Game</title>
   </head>
   <body>
@@ -30,6 +33,10 @@
     <main>
       <%- include('partials/_index.ejs')%>
     </main>
+      <script src="wow/dist/wow.js"</script>
+      <script type="text/javascript">
+        new WOW().init();
+      </script>
 
     <footer class="animated flipInX">
       <%- include('partials/_footer.ejs')%>
