--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,9 +17,14 @@
     <!--include materialize.js for materize css js stuffs-->
     <script src="materialize-css/bin/materialize.js" charset="utf-8"></script>
 
-    <!--include  the wow.js library for cool scroll reveals-->
-    <script src="wow/dist/wow.js" charset="utf-8">new WOW().init();</script>
-  
+
+    <!--include the primsjs library for syntax highlighting-->
+    <script src="prismjs/prism.js" charset="utf-8"></script>
+
+    <link rel="stylesheet" href="prismjs/themes/prism.css">
+
+    <!--Include our custom js files here-->
+    <script src="js/main.js" charset="utf-8"></script>
 
     <title>Git-Game</title>
   </head>
