--- a/views/partials/_index.ejs
+++ b/views/partials/_index.ejs
@@ -1,20 +1,170 @@
+<!--THESE ARE SCRIPTS USED FOR THE COUNTER-->
+<script>
+        jQuery(document).ready(function($) {
+            $('.counter').counterUp({
+                delay: 10,
+                time: 1000
+            });
+        });
+</script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+<script src="js/jquery.counterup.js"></script>
 
 
 <div class="container center wow bounceInUp">
   <h1 class="animated slideInUp">
     Git-Game
   </h1>
+
+<!--
+  <div class="row">
+      <div class="col s12">
+        <span class="counter"></span>
+      </div>
+  </div>
+</div>
+-->
+
+<div class="container animated flip">
+    <p class="flow-text">
+      This is the official website for the git-game and all its versions!
+    </p>
 </div>
 
-
-<div class="container animated rubberBand">
+<div class="container animated slideInLeft">
+  <h5 class="left">What is the git-game?</h5><br>
   <div class="row">
-    <div class="col s12">
-      <p>
+    <div class="col s6">
 
+    </div>
+    <div class="col 6">
+      <p align="left">
+        Great question! The git-game is a terminal based game that teaches both new and advances users some pretty cool features of the git <b>scm</b> (source control management) system.
+        The theme of the game is a scavanger hunt. Using git's commands you find clues that will help you solve the "puzzle".
       </p>
     </div>
   </div>
 </div>
 
+<div class="container animated slideInLeft">
+  <h5 class="left">How do I play?</h5><br>
+  <div class="row">
+    <div class="col s6">
+
+    </div>
+    <div class="col 6">
+      <p align="left">
+        Also a great question! In order to play you simply clone the respository and follow the instructions in the README. Simple as That.
+      </p>
+    </div>
+  </div>
+</div>
+
+<div class="container animated slideInLeft">
+  <h5 class="left">What type of experience do need?</h5><br>
+  <div class="row">
+    <div class="col s8">
+      <p align="left">
+        You will need a basic understanding of how git works. Stuff like <span><pre><code class="language-git">$ git clone</code> <br><code class="language-git">$ git add</code><br><code class="language-git">$ git commit</code><br><code class="language-git">$ git log</code>  </pre></span>
+      </p>
+      <p>
+        If you know theses basic things above then you should be just fine :)
+      </p>
+    </div>
+  </div>
+</div>
+
+
+<section class="wow bounce">
+  <div class="container">
+    <div class="left">
+      <h5>Lets Get Started!</h5>
+      <p align="left" >
+        First, pick a flavor
+      </p>
+    </div>
+
+  <div class="row">
+    <div class="col 6">
+
+    </div>
+    <div class="col s6">
+
+    </div>
+  </div>
+  </div>
+
+</section>
+
+<div class="container">
+  <div class="row">
+      <div class="col s6">
+        <div class="card">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img class="activator" src="images/git-game.png">
+      </div>
+      <div class="card-content">
+        <span class="card-title activator grey-text text-darken-4">git-game<i class="material-icons right">more_vert</i></span>
+        <p><a href="https://github.com/git-game/git-game" target="_blank">link to game</a></p>
+      </div>
+      <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4">git-game<i class="material-icons right">close</i></span><br>
+        <div class="container center">
+          <!-- Place this tag where you want the button to render. -->
+          <!-- Place this tag where you want the button to render. -->
+          <a class="github-button" href="https://github.com/git-game/git-game" data-icon="octicon-star" data-style="mega" data-count-href="/git-game/git-game/stargazers" data-count-api="/repos/git-game/git-game#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star git-game/git-game on GitHub">Star</a>
+          <br>
+          <!-- Place this tag where you want the button to render. -->
+          <a class="github-button" href="https://github.com/git-game/git-game/fork" data-icon="octicon-repo-forked" data-style="mega" data-count-href="/git-game/git-game/network" data-count-api="/repos/git-game/git-game#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork git-game/git-game on GitHub">Fork</a>
+          <br>
+          <!-- Place this tag where you want the button to render. -->
+          <a class="github-button" href="https://github.com/git-game/git-game" data-icon="octicon-eye" data-style="mega" data-count-href="/git-game/git-game/watchers" data-count-api="/repos/git-game/git-game#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch git-game/git-game on GitHub">Watch</a>
+        </div>
+    </div>
+  </div>
+
+      </div>
+
+      <div class="col s6">
+        <div class="card">
+  <div class="card-image waves-effect waves-block waves-light">
+    <img class="activator" src="images/git-game-v2.png">
+  </div>
+  <div class="card-content">
+    <span class="card-title activator grey-text text-darken-4">git-game-v2<i class="material-icons right">more_vert</i></span>
+    <p><a href="https://github.com/git-game/git-game-v2" target="_blank">link to game</a></p>
+  </div>
+  <div class="card-reveal">
+    <span class="card-title grey-text text-darken-4">git-game-v2<i class="material-icons right">close</i></span><br>
+    <div class="container center">
+      <!-- Place this tag where you want the button to render. -->
+      <a class="github-button" href="https://github.com/git-game/git-game-v2" data-icon="octicon-star" data-style="mega" data-count-href="/git-game/git-game-v2/stargazers" data-count-api="/repos/git-game/git-game-v2#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star git-game/git-game-v2 on GitHub">Star</a>
+      <br>
+      <!-- Place this tag where you want the button to render. -->
+      <a class="github-button" href="https://github.com/git-game/git-game-v2/fork" data-icon="octicon-repo-forked" data-style="mega" data-count-href="/git-game/git-game-v2/network" data-count-api="/repos/git-game/git-game-v2#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork git-game/git-game-v2 on GitHub">Fork</a>
+      <br>
+      <!-- Place this tag where you want the button to render. -->
+      <a class="github-button" href="https://github.com/git-game/git-game-v2" data-icon="octicon-eye" data-style="mega" data-count-href="/git-game/git-game-v2/watchers" data-count-api="/repos/git-game/git-game-v2#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch git-game/git-game-v2 on GitHub">Watch</a>
+    </div>
+  </div>
+</div>
+
+      </div>
+  </div>
+</div>
+
+
+
+<div class="container animated rubberBand">
+  <h5>Then run this command in your terminal</h5>
+  <p align="left" >
+  </p>
+  <div class="row">
+    <pre><code class="language-git">$ git clone https://github.com/git-game/&lt;GIT-GAME-VERSION&gt;.git</code></pre>
+  </div>
+</div>
+<h5>And then just follow the README. Good luck!</h5><br>
+
   <link rel="stylesheet" href="css/index.css">
+  <!-- Place this tag right after the last button or just before your close body tag. -->
+<script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
