--- a/views/creators.ejs
+++ b/views/creators.ejs
@@ -1,4 +1,19 @@
 <!DOCTYPE html>
+<!---
+_ _         _____ _
+/\  /\___| | | ___   /__   \ |__   ___ _ __ ___
+/ /_/ / _ \ | |/ _ \    / /\/ '_ \ / _ \ '__/ _ \
+/ __  /  __/ | | (_) |  / /  | | | |  __/ | |  __/
+\/ /_/ \___|_|_|\___/   \/   |_| |_|\___|_|  \___|
+
+Thank you for taking a look at this game. I see that you are interested in the source code.
+If you like this website please take some time to check me out @
+
+www.ruelas.me :)
+
+My name is Juan Ruelas and I am a student at UC Riverside who helped create this game :)
+Thank you and carry on :)))))))
+-->
 <html>
   <head>
     <meta charset="utf-8">
@@ -17,8 +32,11 @@
     <!--include materialize.js for materize css js stuffs-->
     <script src="materialize-css/bin/materialize.js" charset="utf-8"></script>
 
-    <!--include  the wow.js library for cool scroll reveals-->
-    <script src="wow/dist/wow.js" charset="utf-8">new WOW().init();</script>
+
+    <!--include the primsjs library for syntax highlighting-->
+    <script src="prismjs/prism.js" charset="utf-8"></script>
+
+    <link rel="stylesheet" href="prismjs/themes/prism.css">
 
     <!--Include our custom js files here-->
     <script src="js/main.js" charset="utf-8"></script>
@@ -31,12 +49,8 @@
     </head>
 
     <main>
-      <%- include('partials/_index.ejs')%>
+      <%- include('partials/_creators.ejs')%>
     </main>
-      <script src="wow/dist/wow.js"</script>
-      <script type="text/javascript">
-        new WOW().init();
-      </script>
 
     <footer class="animated flipInX">
       <%- include('partials/_footer.ejs')%>
