--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,19 @@
 <!DOCTYPE html>
+<!---
+_ _         _____ _
+/\  /\___| | | ___   /__   \ |__   ___ _ __ ___
+/ /_/ / _ \ | |/ _ \    / /\/ '_ \ / _ \ '__/ _ \
+/ __  /  __/ | | (_) |  / /  | | | |  __/ | |  __/
+\/ /_/ \___|_|_|\___/   \/   |_| |_|\___|_|  \___|
+
+Thank you for taking a look at this game. I see that you are interested in the source code.
+If you like this website please take some time to check me out @
+
+www.ruelas.me :)
+
+My name is Juan Ruelas and I am a student at UC Riverside who helped create this game :)
+Thank you and carry on :)))))))
+-->
 <html>
   <head>
     <meta charset="utf-8">
