done with creators, changed default port to 8080

--- a/views/creators.ejs
+++ b/views/creators.ejs
@@ -40,6 +40,7 @@ Thank you and carry on :)))))))
 
     <!--Include our custom js files here-->
     <script src="js/main.js" charset="utf-8"></script>
+    <%- include('partials/_ga.ejs') %>
 
     <title>Git-Game</title>
   </head>
