--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,7 @@ www.ruelas.me :)
 My name is Juan Ruelas and I am a student at UC Riverside who helped create this game :)
 Thank you and carry on :)))))))
 -->
+
 <html>
   <head>
     <meta charset="utf-8">
@@ -40,6 +41,8 @@ Thank you and carry on :)))))))
 
     <!--Include our custom js files here-->
     <script src="js/main.js" charset="utf-8"></script>
+
+    <%- include('partials/_ga.ejs') %>
 
     <title>Git-Game</title>
   </head>
