--- a/views/partials/_creators.ejs
+++ b/views/partials/_creators.ejs
@@ -1,50 +1,64 @@
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" media="screen" title="no title" charset="utf-8">
 
 <br>
 <div class="container">
+
+  <div class="row center">
+
+    <div class="container">
+
+    </div>
+
+    <div class="col s6">
+      <div class="center">
+        <h1>Henry Garcia</h1>
+        <a href="https://github.com/hgarc014" target="_blank"><img id="pic" src="images/henry.jpg" alt="image here" /></a>
+      </div>
+      <p>
+        Visit Henry at <a href="www.programhenry.com">programhenry.com</a>
+      </p>
+    </div>
+
+    <div class="col s6">
+      <h1>Juan Ruelas</h1>
+      <a href="https://github.com/channeljuannews" target="_blank"><img id="pic" src="images/me.jpg" alt="image here" /></a>
+      <p>
+        Vist Juan  at <a href="wwww.ruelas.me" target="_blank">ruelas.me</a>
+      </p>
+    </div>
+
+
+  </div>
+
+  <div class="row center">
+    <div class="col s6">
+      <div class="center">
+        <h1>Calvin Kwan</h1>
+        <a href="https://github.com/hkwan003" target="_blank"><img id="pic" src="images/calvin.jpg" alt="image here" /></a>
+      </div>
+      <p>
+        Calvin has no website at this time
+      </p>
+    </div>
+
+    <div class="col s6">
+      <h1>John Dixon</h1>
+      <a href="https://github.com/jdixo001" target="_blank"><img id="pic" src="images/john.jpg" alt="image here" /></a>
+    </div>
+    <p>
+      John has no website at this time
+    </p>
+  </div>
+</div>
+
+
+<div class="container center">
   <div class="row">
       <div class="col s12">
           <a href="/" class="waves-effect waves-light btn" style="background-color: #64b5f6;">Back</a>
       </div>
+
   </div>
-</div>
-
-<div class="container">
-
-  <div class="row">
-    <div class="col s12">
-      <div class="center">
-        <h1>Henry Garcia</h1>
-        <p>
-
-        </p>
-      </div>
-    </div>
-  </div>
-
-
-    <div class="row">
-      <div class="col s12">
-        <div class="center">
-          <h1>John Dixon</h1>
-          <p>
-
-          </p>
-        </div>
-      </div>
-    </div>
-
-
-      <div class="row">
-        <div class="col s12">
-          <div class="center">
-            <h1>Juan Ruelas</h1>
-            <p>
-              
-            </p>
-          </div>
-        </div>
-      </div>
-
 </div>
 
 
