fixed problem with links under creator pics

--- a/views/partials/_creators.ejs
+++ b/views/partials/_creators.ejs
@@ -15,7 +15,7 @@
         <a href="https://github.com/hgarc014" target="_blank"><img id="pic" src="images/henry.jpg" alt="image here" /></a>
       </div>
       <p>
-        Visit Henry at <a href="www.programhenry.com">programhenry.com</a>
+        Visit Henry at <a href="http://www.programhenry.com">programhenry.com</a>
       </p>
     </div>
 
@@ -23,7 +23,7 @@
       <h1>Juan Ruelas</h1>
       <a href="https://github.com/channeljuannews" target="_blank"><img id="pic" src="images/me.jpg" alt="image here" /></a>
       <p>
-        Vist Juan  at <a href="wwww.ruelas.me" target="_blank">ruelas.me</a>
+        Vist Juan  at <a href="http://www.ruelas.me" target="_blank">ruelas.me</a>
       </p>
     </div>
 
