forgot to make the website mobile friendly, added meta tag for scaling

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,1 +1,15 @@
-error
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <!--THis is used for making mobile browsers scale-->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+    </head>
+    <body>
+        <div class="container">
+            <h1>Error</h1>
+        </div>
+    </body>
+</html>
