--- a/views/creators.ejs
+++ b/views/creators.ejs
@@ -20,6 +20,10 @@ Thank you and carry on :)))))))
     <!--include jQuery for everyday life-betterness -->
     <script src="jquery/dist/jquery.js" charset="utf-8"></script>
 
+    <!--THis is used for making mobile browsers scale-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <!--include the google api for fonts for our materize framework-->
      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
