made the creators page responsive so images dont crowd

--- a/views/partials/_creators.ejs
+++ b/views/partials/_creators.ejs
@@ -1,55 +1,84 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" media="screen" title="no title" charset="utf-8">
 
 <br>
+
+<!--ROW ONE--->
 <div class="container">
+  <div class="section">
 
-  <div class="row center">
+    <!--   Icon Section   -->
+    <div class="row">
 
-    <div class="container">
-
-    </div>
-
-    <div class="col s6">
-      <div class="center">
-        <h1>Henry Garcia</h1>
-        <a href="https://github.com/hgarc014" target="_blank"><img id="pic" src="images/henry.jpg" alt="image here" /></a>
+      <div class="col s12 m6">
+        <div class="icon-block">
+            <div class="center">
+                <h1>Henry Garcia</h1>
+                <a href="https://github.com/hgarc014" target="_blank"><img id="pic" src="images/henry.jpg" alt="image here" /></a>
+              <p>
+                Visit Henry at <a href="http://www.programhenry.com">programhenry.com</a>
+              </p>
+            </div>
+        </div>
       </div>
-      <p>
-        Visit Henry at <a href="http://www.programhenry.com">programhenry.com</a>
-      </p>
-    </div>
 
-    <div class="col s6">
-      <h1>Juan Ruelas</h1>
-      <a href="https://github.com/channeljuannews" target="_blank"><img id="pic" src="images/me.jpg" alt="image here" /></a>
-      <p>
-        Vist Juan  at <a href="http://www.ruelas.me" target="_blank">ruelas.me</a>
-      </p>
-    </div>
-
-
-  </div>
-
-  <div class="row center">
-    <div class="col s6">
-      <div class="center">
-        <h1>Calvin Kwan</h1>
-        <a href="https://github.com/hkwan003" target="_blank"><img id="pic" src="images/calvin.jpg" alt="image here" /></a>
+      <div class="col s12 m6">
+        <div class="icon-block">
+            <div class="center">
+                <h1>Juan Ruelas</h1>
+                <a href="https://github.com/channeljuannews" target="_blank"><img id="pic" src="images/me.jpg" alt="image here" /></a>
+                <p>
+                  Vist Juan  at <a href="http://www.ruelas.me" target="_blank">ruelas.me</a>
+                </p>
+            </div>
+        </div>
       </div>
-      <p>
-        Calvin has no website at this time
-      </p>
-    </div>
 
-    <div class="col s6">
-      <h1>John Dixon</h1>
-      <a href="https://github.com/jdixo001" target="_blank"><img id="pic" src="images/john.jpg" alt="image here" /></a>
-      <p>
-        John has no website at this time
-      </p>
     </div>
   </div>
+  <br><br>
 </div>
+
+<!--ROW TWO--->
+<div class="container">
+  <div class="section">
+
+    <!--   Icon Section   -->
+    <div class="row">
+
+      <div class="col s12 m6">
+        <div class="icon-block">
+            <div class="center">
+                <h1>Calvin Kwan</h1>
+                <a href="https://github.com/hkwan003" target="_blank"><img id="pic" src="images/calvin.jpg" alt="image here" /></a>
+              <p>
+                Calvin has no website at this time
+              </p>
+            </div>
+        </div>
+      </div>
+
+      <div class="col s12 m6">
+        <div class="icon-block">
+            <div class="center">
+                <h1>John Dixon</h1>
+                <a href="https://github.com/jdixo001" target="_blank"><img id="pic" src="images/john.jpg" alt="image here" /></a>
+                <p>
+                  John has no website at this time
+                </p>
+            </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+  <br><br>
+</div>
+
+
+
+
+
+
 
 
 <div class="container center">
@@ -62,4 +91,26 @@
 </div>
 
 
+
+
+
+
+
 <link rel="stylesheet" href="css/creators.css" media="screen" title="no title" charset="utf-8">
+
+<script type="text/javascript">
+
+    function resize() {
+
+    }
+
+    window.onload = function(){
+
+
+
+        window.onresize = function() {
+            console.log('asf')
+        }
+
+    }
+</script>
