--- a/views/partials/_index.ejs
+++ b/views/partials/_index.ejs
@@ -42,7 +42,7 @@
     </div>
     <div class="col 6">
       <p align="left">
-        Great question! The git-game is a terminal based game that teaches both new and advances users some pretty cool features of the git <b>scm</b> (source control management) system.
+        Great question! The git-game is a terminal based game that teaches both new and advanced users some pretty cool features of the git <b>scm</b> (source control management) system.
         The theme of the game is a scavanger hunt. Using git's commands you find clues that will help you solve the "puzzle".
       </p>
     </div>
